fix:image clean code